# yandex-music-qt

./: .gitignore  README.md  main.py  pyproject.toml  pyrightconfig.json
yandex_music_qt_app/: __main__.py  config.py
yandex_music_qt_app/models/: track_model.py
yandex_music_qt_app/services/: music.py  radio.py
yandex_music_qt_app/ui/: about.py  about.ui  main_window.py  main_windowui.ui  queuewidget.py  queuewidget.ui
yandex_music_qt_app/ui/resourcefiles/: main.qrc  resources.py
yandex_music_qt_app/utils/: action_manager.py  auth.py  load_data.py  on_click_in_list.py  player_tools.py  sync_queue.py
yandex_music_qt_app/widgets/: PlayerList.py
yandex_music_qt_app/window/: about.py  login.py  queuewindow.py  window.py
