[tool.poetry]
name = "yandex-music-qt-app"
version = "0.1.0"
description = ""
authors = ["Alexander Borzov <borzoff@internet.ru>"]
readme = "README.md"
packages = [{include = "yandex_music_qt_app"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
pyqt6 = "^6.5.3"
yandex-music = "^2.1.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.9.0"
qasync = "^0.27.1"
pyinstaller = "6.3.0"
pydantic = "^2.5.3"

[tool.poetry.group.pyright.dependencies]
black = "^23.10.0"
ruff = "^0.1.0"
pyright = "^1.1.337"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
